--- a/pc/css/style.css
+++ b/pc/css/style.css
@@ -1,4 +1,4 @@
-html,body{
+html,body,h1,h3,p{
 	margin: 0;
 	padding: 0;
 }
@@ -10,6 +10,9 @@ ul{
 	padding: 0;
 	margin: 0;
 	list-style: none;
+}
+h1,h3{
+	font-weight: normal;
 }
 a{
 	text-decoration: none;
@@ -28,7 +31,10 @@ a{
 	clear: both;
 }
 
-
+.pagesize{
+	width: 1200px;
+	margin: 0 auto;
+}
 .header{
 	width: 1200px;
 	padding: 28px 0;
@@ -109,6 +115,7 @@ body{
 }
 .banner-list img{
 	position: absolute;
+	height: 700px;
 	top: 0;
 	left: 50%;
 	margin-left: -960px;
@@ -118,4 +125,108 @@ body{
 }
 .banner .swiper-pagination-bullet{
 	background: #616161;
+}
+
+.notice{
+	margin-top: 68px;
+}
+.side-title{
+	text-align: center;
+	margin-bottom: 40px;
+}
+.side-title .chinese{
+	line-height: 40px;
+	font-size: 30px;
+}
+.side-title .english{
+	height: 20px;
+	font-size: 0;
+}
+.side-title .english span{
+	display: inline-block;
+	vertical-align: top;
+}
+.side-title .english .line{
+	margin-top: 10px;
+	height: 1px;
+	width: 90px;
+	background: #dedede;
+}
+.side-title .english .text{
+	line-height: 20px;
+	margin: 0 13px;
+	font-family: arial;
+	font-size: 12px;
+	color: #999;
+}
+.notice-list{
+	float: left;
+	width: 360px;
+	height: 80px;
+	margin: 0 58px 32px 0;
+	padding-bottom: 32px;
+}
+.notice-list:nth-of-type(3n){
+	margin-right: 0;
+}
+.notice-list:nth-of-type(1),.notice-list:nth-of-type(2),.notice-list:nth-of-type(3){
+	border-bottom: 1px solid #ebebeb;
+}
+.notice-list .serial{
+	float: left;
+	width: 78px;
+	height: 80px;
+	text-align: center;
+	background: #f2f2f2;
+	color: #999;
+}
+.notice-list .number{
+	line-height: 58px;
+	font-size: 30px;
+}
+.notice-list .time{
+	line-height: 13px;
+	font-size: 12px;
+}
+.notice-list .text{
+	width: 270px;
+	float: right;
+	color: #000;
+}
+.notice-list .text .name{
+	height: 20px;
+	line-height: 20px;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: normal;
+	font-size: 16px;
+	margin-bottom: 10px;
+}
+.notice-list .text .detail{
+	line-height: 24px;
+	font-size: 14px;
+	height: 48px;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: normal;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
+}
+.notice .more{
+	width: 218px;
+	height: 54px;
+	border: 1px solid #dedede;
+	line-height: 56px;
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 80px;
+}
+.notice .more a{
+	display: block;
+	color: #575757;
+	letter-spacing: 4px;
 }
