--- a/pc/css/style.css
+++ b/pc/css/style.css
@@ -5,6 +5,7 @@ html,body,h1,h3,p{
 body{
 	font-size: 14px;
 	width: 100%;
+	position: relative;
 }
 ul{
 	padding: 0;
@@ -17,6 +18,13 @@ h1,h3{
 a{
 	text-decoration: none;
 	color: #292929;
+}
+#to-top{
+	position: fixed;
+	right: 30px;
+	z-index: 99999;
+	bottom: 50px;
+	cursor: pointer;
 }
 .left{
 	float: left;
@@ -34,6 +42,7 @@ a{
 .pagesize{
 	width: 1200px;
 	margin: 0 auto;
+	position: relative;
 }
 .header{
 	width: 1200px;
@@ -422,4 +431,493 @@ body{
 	text-align: center;
 	font-size: 12px;
 	color: #666;
+}
+
+.footer{
+	padding-top: 38px;
+	background: #1f1f1f;
+}
+.footer .top{
+	position: relative;
+	min-height: 215px;
+	border-bottom: 2px solid #353535;
+}
+
+.footer-list{
+	float: left;
+	width: 166px;
+}
+.footer-list .title{
+	line-height: 36px;
+	margin-bottom: 5px;
+	font-size: 16px;
+	font-weight: bold;
+	color: #fff;
+}
+.footer-list .nav-bar{
+	line-height: 24px;
+	font-size: 12px;
+	color: #aaa;
+}
+.footer-list .nav-bar a{
+	color: #aaa;
+}
+.footer-list .nav-bar a:hover{
+	color: #fff;
+}
+.footer-list .location{
+	margin-bottom: 20px;
+	padding-left: 40px;
+	background: url(../images/location.png) no-repeat 0 center;
+}
+.footer-list .phone{
+	padding-left: 40px;
+	line-height: 26px;
+	background: url(../images/phone.png) no-repeat 0 center;
+}
+
+.er-code{
+	position: absolute;
+	right: 0;
+	top: -58px;
+}
+.er-code .wrap-code{
+	padding: 0 8px;
+}
+.er-code .code{
+	padding: 28px;
+	font-size: 0;
+	width: 368px;
+	box-sizing: border-box;
+	background: #3c3c3c;
+}
+.er-code .code img{
+	display: inline-block;
+	margin-right: 25px;
+}
+.er-code .code .text{
+	vertical-align:top;
+	display: inline-block;
+	font-size: 14px;
+	color: #aaa;
+}
+.er-code .code .sao{
+	line-height: 34px;
+	margin-bottom: 16px;
+}
+.er-code .code  .tip{
+	line-height: 24px;
+}
+.er-code .code .number{
+	line-height: 34px;
+	font-size: 20px;
+}
+.red-bg{
+	background: #cc251d;
+	line-height: 46px;
+	font-size: 24px;
+	font-weight: bold;
+	color: #fff;
+	text-align: center;
+}
+
+.footer .bottom{
+	line-height: 24px;
+	background: #000;
+	padding: 8px 0;
+	font-size: 12px;
+}
+.footer .link{
+	text-align: center;
+	color: #aaa;
+}
+.footer .link a,.footer .beian a{
+	color: #aaa;
+	padding: 0 16px;
+}
+.footer .bottom a:hover{
+	color: #fff;
+}
+.footer .beian{
+	text-align: center;
+	color: #aaa;
+}
+
+
+.main-wrap{
+	margin: 60px auto;
+}
+.main-wrap  .left-side{
+	float: left;
+	width: 324px;
+}
+.main-wrap .right-side{
+	float: right;
+	width: 876px;
+}
+.location-detail{
+	line-height: 48px;
+	margin-bottom: 14px;
+	color: #999;
+}
+.location-detail a{
+	color: #999;
+}
+.location-detail a:hover{
+	color: #c51230;
+}
+
+.side-menu{
+	width: 260px;
+}
+.side-menu .title{
+	line-height: 54px;
+	text-align: center;
+	background: #c51230;
+	color: #fff;
+	font-size: 18px;
+}
+.menu-wrap{
+	margin-bottom: 32px;
+}
+.sub-menu{
+	border: 1px solid #e9e9e9;
+	border-top: none;
+}
+.sub-menu .item{
+	position: relative;
+	padding: 0 24px;
+	line-height: 44px;
+	font-size: 16px;
+}
+.sub-menu .item .sub-sub{
+	display: none;
+	position: absolute;
+	width: 180px;
+	top: 0;
+	left: 100%;
+	background: #efefef;
+	z-index: 999;
+	padding: 0 10px 0 20px;
+}
+.sub-menu .item .sub-sub a:hover{
+	color: #c51230;
+}
+.sub-menu .item a{
+	display: block;
+	color: #000;
+}
+.sub-menu .item .to-right{
+	float: right;
+	width: 10px;
+	height: 17px;
+	margin-top: 14px;
+	background: url(../images/right.png) no-repeat;
+}
+.sub-menu .active>a .to-right,.sub-menu .item:hover>a .to-right{
+	background: url(../images/right-active.png) no-repeat;
+}
+.sub-menu .item>.active,.sub-menu .item:hover{
+	background: #f5f5f5;
+}
+.sub-menu .active>a,.sub-menu .item:hover>a{
+	color: #c51230;
+}
+.side-menu .gray{
+	background: #b2b2b2;
+}
+.sub-menu .detail{
+	padding: 0 24px;
+	line-height: 26px;
+	font-size: 12px;
+	color: #868686;
+}
+
+.right-side .title{
+	line-height: 62px;
+	text-align: center;
+	border-bottom: 1px solid #dedede;
+	font-size: 30px;
+	color: #000;
+}
+.right-side .main{
+	margin-top: 8px;
+}
+.right-side .main .name{
+	line-height: 76px;
+	font-size: 20px;
+	font-weight: bold;
+	color: #5b5b5b;
+}
+.right-side .map {
+	margin-top: 45px;
+	width: 100%;
+}
+.right-side .map img{
+	width: 100%;
+}
+.link-info  .item{
+	float: left;
+	width: 50%;
+	height: 50%;
+	line-height: 50px;
+	margin-bottom: 5px;
+	font-size: 16px;
+	color: #424242;
+}
+.link-info span{
+	float: left;
+}
+.link-info .icon{
+	width: 50px;
+	height: 50px;
+	margin-right: 10px;
+	background: url(../images/icon.png) no-repeat;
+}
+.link-info .icon2{
+	background-position: -50px 0;
+}
+.link-info .icon3{
+	background-position: 0 -50px;
+}
+.link-info .icon4{
+	background-position: -50px -50px;
+}
+.link-info .icon5{
+	background-position: 0 -100px;
+}
+.main .tip-join{
+	margin: 20px 0;
+	line-height: 36px;
+	font-size: 16px;
+	color: #424242;
+}
+.main-list .item{
+	line-height: 55px;
+	border-bottom: 1px solid #dedede;
+	font-size: 16px;
+	font-weight: bold;
+}
+.main-list .item a{
+	display: block;
+	color: #484848;
+}
+.file .text{
+	padding-left: 34px;
+	background: url(../images/file.png) no-repeat 0 center;
+}
+.file .to-right{
+	float: right;
+	width: 15px;
+	height: 12px;
+	margin-top: 22px;
+	background: url(../images/to-right.png) no-repeat;
+}
+.main-list .item a:visited, .main-list .item a:hover,.main-list .item a:active{
+	color: #c51230;
+} 
+.main-list .item a:visited .to-right, .main-list .item a:hover .to-right,.main-list .item a:active .to-right{
+	background: url(../images/to-right-active.png) no-repeat;
+} 
+
+.result-list .item{
+	padding: 22px 0;
+	height: 100px;
+	border-bottom: 1px solid #dedede;
+}
+.result-list .item a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: #f5f5f5;
+}
+.result-list .item img{
+	float: left;
+	width: 130px;
+	max-height: 100px;
+	margin-right: 22px;
+}
+.result-list .text{
+	float: left;
+	width: 680px;
+}
+.result-list .list-title{
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	font-size: 16px;
+	font-weight: bold;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+
+}
+.result-list .detail{
+	color: #424242;
+	line-height: 18px;
+	max-height: 36px;
+	width: 100%;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
+
+.page{
+	text-align: center;
+	font-size: 0;
+	margin: 30px 0;
+}
+.page a{
+	display: inline-block;
+	padding: 0 5px;
+	min-width: 18px;
+	height: 28px;
+	line-height: 28px;
+	text-align: center;
+	border: 1px solid #dcdcdc;
+	margin: 0 4px;
+	font-size: 14px;
+	color: #666;
+}
+.page .active{
+	background: #3c3c3c;
+	color: #fff;
+}
+.check-wrap .title{
+	border-bottom: none;
+}
+.check-tip{
+	line-height: 16px;
+	text-align: center;
+	font-size: 0;
+}
+.check-tip .text,.check-tip img{
+	vertical-align: top;
+	display: inline-block;
+}
+.check-tip .text{
+	margin: 0 10px;
+	font-size: 14px;
+	color: #c51230;
+}
+.check-box{
+	margin: 34px 0;
+}
+.check-box .list{
+	line-height: 44px;
+	margin-bottom: 20px;
+	text-align: center;
+}
+.check-box .inp{
+	height: 44px;
+	width: 320px;
+	padding: 0 10px;
+	border: 1px solid #d9d9d9;
+}
+.check-box .btn{
+	text-align: center;
+}
+.check-box .btn input{
+	height: 44px;
+	width: 340px;
+	border: none;
+	background: #c51230;
+	color: #fff;
+	font-size: 20px;
+	margin-left: 56px;
+}
+.right-side .notice-list-wrap{
+	margin-top: 32px;
+}
+.right-side .notice-list{
+	float: none;
+	width: 100%;
+	padding-bottom: 32px;
+	border-bottom: 1px solid #ebebeb;
+}
+.right-side .notice-list .text{
+	width: 780px;
+}
+.right-side .notice-list .text .name1{
+	line-height: 20px;
+	margin-bottom: 10px;
+	font-size: 16px;
+	color: #000;
+}
+.right-side .notice-list .text .detail{
+	line-height: 24px;
+	font-size: 14px;
+	color: #000;
+}
+
+.right-side .news-list{
+	float: left;
+	width: 270px;
+	margin: 15px 10px;
+	background: #fff;
+}
+.right-side .news-list:hover{
+	box-shadow:1px 2px 5px 5px rgba(0,0,0,0.1);
+}
+.right-side .news-list a{
+	display: block;
+	width: 100%;
+}
+.right-side .news-list img{
+	width: 100%;
+	height: 208px;
+}
+.right-side .news-list .title1{
+	padding: 0 24px;
+	margin-top: 7px;
+	line-height: 40px;
+	font-size: 18px;
+	font-weight: bold;
+}
+.right-side .select-option{
+	margin: 32px 0 24px;
+	text-align: center;
+	font-size: 0;
+}
+.right-side .select-option a{
+	display: inline-block;
+	height: 42px;
+	line-height: 42px;
+	width: 140px;
+	text-align: center;
+	margin: 0 5px;
+	border: 1px solid #555;
+	border-radius: 21px;
+	font-size: 14px;
+	color: #000;
+}
+.right-side .select-option .active,.right-side .select-option a:hover{
+	border: 1px solid #c51230;
+	color: #c51230;
+}
+.right-side .star-wrap{
+	margin-top: 16px;
+	width: 836px;
+}
+.right-side .star-list {
+	background: #f5f5f5;
+	margin: 16px 20px;
+}
+.right-side .star-list .pic .name{
+	line-height: 36px;
+	color: #fff;
+	font-weight: normal;
+	font-size: 14px;
+}
+.right-side .star-list .title{
+	line-height: 38px;
+	font-size: 16px;
+	color: #000;
+	border-bottom: none;
+	text-align: left;
+}
+
+.download-wrap{
+	margin-top: 36px;
 }
