--- a/wap/css/style.css
+++ b/wap/css/style.css
@@ -5,9 +5,10 @@ html, body {
 body {
 	background: #f0f0f0;
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 0.5rem;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
 ul{
 	margin: 0;
@@ -24,96 +25,34 @@ a{
 img{
 	border: none;
 }
-.menu-swiper {
-	width: 100%;
-	height: 100%;
-}
-.menu-swiper .swiper-slide {
-	text-align: left;
-	font-size: 18px;
-}
-.menu-swiper .menu {
-	min-width: 100px;
-	width: 46%;
-	max-width: 320px;
-	background-color: #c51230;
-	color: #fff;
-}
-.menu-swiper .content {
-	width: 100%;
-}
-
-.menu-swiper .menu-button {
-	position: absolute;
-	top: 0px; right: 0px;
-	padding: 0.75rem;
-	cursor: pointer;
-	-webkit-transition: .3s;
-	transition: .3s;
-	background-color: #2a2a2a;
-	/*margin: 14px;
-	border-radius: 5px;*/
-}
-.menu-button .bar:nth-of-type(1) {
-	margin-top: 0px;
-}
-.menu-button .bar:nth-of-type(3) {
-	margin-bottom: 0px;
-	width: 0.625rem;
-	margin-right: 0.3rem;
-}
-
-.bar {
-	position: relative;
+.clear:after{
+	content: '';
 	display: block;
-	width: 0.925rem;
-	height: 2px;
-	margin: 0.125rem 0;
-	background-color: #9d9d9d;
-	-webkit-transition: .3s;
-	transition: .3s;
+	height: 0;
+	clear: both;
 }
-
-/*.menu-button:hover .bar:nth-of-type(1) {
-	-webkit-transform: translateY(1.5px) rotate(-4.5deg);
-	-ms-transform: translateY(1.5px) rotate(-4.5deg);
-	transform: translateY(1.5px) rotate(-4.5deg);
-}*/
-/*.menu-button:hover .bar:nth-of-type(2) {
-	opacity: .9;
-}*/
-/*.menu-button:hover .bar:nth-of-type(3) {
-	-webkit-transform: translateY(-1.5px) rotate(4.5deg);
-	-ms-transform: translateY(-1.5px) rotate(4.5deg);
-	transform: translateY(-1.5px) rotate(4.5deg);
-}*/
-
-/*.cross .bar:nth-of-type(1) {
-	-webkit-transform: translateY(15px) rotate(-45deg);
-	-ms-transform: translateY(15px) rotate(-45deg);
-	transform: translateY(15px) rotate(-45deg);
-}*/
-/*.cross .bar:nth-of-type(2) {
-	opacity: 0;
-}*/
-/*.cross .bar:nth-of-type(3) {
-	-webkit-transform: translateY(-15px) rotate(45deg);
-	-ms-transform: translateY(-15px) rotate(45deg);
-	transform: translateY(-15px) rotate(45deg);
+.menu{
+	position: fixed;
+	width: 46%;
+	height: 100%;
+	background: #c51230;
+	top: 2.4rem;
+	right: -46%;
+	z-index: 99;
+	box-shadow: inset 5px 0 5px rgba(0,0,0,.15)
 }
-.cross:hover .bar:nth-of-type(1) {
-	-webkit-transform: translateY(13.5px) rotate(-40.5deg);
-	-ms-transform: translateY(13.5px) rotate(-40.5deg);
-	transform: translateY(13.5px) rotate(-40.5deg);
+.menu .close{
+	height: 2.35rem;
 }
-.cross:hover .bar:nth-of-type(2) {
-	opacity: .1;
+.menu .close a{
+	display: block;
+	height: 100%;
+	padding: 0 0.8rem;
 }
-.cross:hover .bar:nth-of-type(3) {
-	-webkit-transform: translateY(-13.5px) rotate(40.5deg);
-	-ms-transform: translateY(-13.5px) rotate(40.5deg);
-	transform: translateY(-13.5px) rotate(40.5deg);
-}*/
+.menu .close img{
+	width: 1.05rem;
+	margin-top: 0.7rem;
+}
 .menu-wrap .menu-item{
 	height: 1.75rem;
 	line-height: 1.75rem;
@@ -129,8 +68,14 @@ img{
 .menu-wrap .menu-item .right{
 	float: right;
 }
-
+.main-content{
+	padding-top: 2.4rem;
+}
 .header{
+	position: fixed;
+	z-index: 88;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 2rem;
 	background: #2a2a2a;
@@ -141,6 +86,17 @@ img{
 	margin-left: 0.65rem;
 	width: 12rem;
 	height: 1.55rem;
+}
+.header .btn{
+	float: right;
+	text-align: center;
+	width: 0.925rem;
+	height: 1.9rem;
+	padding: 0 0.6rem;
+}
+.header .btn img{
+	width: 0.925rem;
+	margin-top: 0.35rem;
 }
 .banner{
 	width: 100%;
@@ -170,4 +126,470 @@ img{
 }
 .section-title .more img{
 	width: 1.7rem;
+	height: 0.4rem;
+}
+.notice .wrap{
+	padding: 0 0.6rem;
+}
+.notice-list{
+	padding:0.6rem 0;
+	border-bottom: 0.025rem solid #ebebeb;
+}
+.notice-list a{
+	display: block;
+}
+.notice-list .serial{
+	float: left;
+	width: 2.4rem;
+	padding: 0.2rem 0;
+	margin-right: 0.4rem;
+	background: #f2f2f2;
+	text-align: center;
+	overflow: hidden;
+}
+.notice-list .serial .number{
+	line-height: 1.05rem;
+	font-size: 1rem;
+	color: #999;
+	font-weight: bold;
+}
+.notice-list .serial .time{
+	font-size: 0.3rem;
+	line-height: 0.6rem;
+}
+
+.notice-list .text{
+	float: left;
+	width: 12rem;
+}
+.notice-list .title{
+	height: 0.8rem;
+	line-height: 0.8rem;
+	margin-bottom: 0.1rem;
+	font-size: 0.7rem;
+	color: #000;
+}
+.notice-list .desc{
+	line-height: 0.7rem;
+	height: 1.4rem;
+	width: 100%;
+	font-size: 0.5rem;
+	color: #686767;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
+
+.news{
+	background: #fff;
+}
+.news-wrap{
+	padding: 0 0.6rem;
+}
+.news-list{
+	padding: 0.6rem 0;
+	border-bottom: 0.025rem solid #ebebeb;
+}
+.news-list a{
+	display: flex;
+}
+.news-list .pic{
+	flex: 0 0 5.2rem;
+	width: 5.2rem;
+	height: 4rem;
+	margin-right: 0.6rem;
+}
+.news-list .title{
+	height: 0.8rem;
+	line-height: 0.8rem;
+	margin-bottom: 0.1rem;
+	font-size: 0.7rem;
+	color: #000;
+}
+.news-list .desc{
+	line-height: 0.7rem;
+	height: 1.4rem;
+	width: 100%;
+	font-size: 0.5rem;
+	color: #686767;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
+.news-list .info{
+	margin-top: 0.4rem;
+	font-size: 0.4rem;
+	color: #acacac;
+	line-height: 0.6rem;
+	white-space: nowrap;
+}
+.news-list .history{
+	padding: 0.1rem 0 0 1rem;
+	margin-right: 0.5rem;
+	background: url(../images/history.png) no-repeat 0 center;
+	background-size: 0.8rem 0.5rem;
+}
+.news-list .time{
+	padding: 0.1rem 0 0 0.65rem;
+	background: url(../images/time.png) no-repeat 0 center;
+	background-size: 0.5rem 0.5rem;
+}
+
+.reward{
+	background: #fff;
+	margin: 0.5rem 0;
+}
+.reward-wrap{
+	padding: 0.6rem;
+}
+.reward-list{
+	float: left;
+	width: 7rem;
+	margin: 0.2rem;
+}
+.reward-list a{
+	display: block;
+	width: 100%;
+}
+.reward-list .pic{
+	width: 7rem;
+	height: 5.5rem;
+}
+.reward-list .title{
+	display: block;
+	text-align: center;
+	font-size: 0.6rem;
+	line-height: 1.4rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.star{
+	background: #fff;
+}
+.star-wrap{
+	padding: 0.6rem;
+	display: flex;
+	justify-content: space-between;
+}
+.star-list{
+	flex: 0 0 7.1rem;
+	width: 7.1rem;
+}
+.star-list .pic{
+	position: relative;
+	width: 7.1rem;
+	height: 9.1rem;
+	overflow: hidden;
+}
+.star-list .pic img{
+	width: 7.1rem;
+	min-height: 9.1rem;
+}
+.star-list .pic .name{
+	position: absolute;
+	width: 100%;
+	line-height: 1.2rem;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,.5);
+	color: #fff;
+	text-align: center;
+	font-size: 0.6rem;
+}
+.star-list .info{
+	margin-top: 0.2rem;
+	padding: 0 0.4rem;
+}
+.star-list .job{
+	height: 1.2rem;
+	width: 100%;
+	line-height: 1.2rem;
+	font-size: 0.7rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.star-list .desc{
+	line-height: 0.8rem;
+	height: 1.6rem;
+	overflow: hidden;
+	width: 100%;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
+
+.excellent{
+	margin: 0.5rem 0;
+	background: #fff;
+}
+.excellet-wrap{
+	padding: 0.6rem;
+}
+.excellent-list{
+	float: left;
+	width: 3.4rem;
+	height: 2.1rem;
+	overflow: hidden;
+	margin: 0.3rem  0.76rem;
+}
+.excellent-list a{
+	display: block;
+}
+.excellent-list img{
+	width: 3.4rem;
+	min-height: 2.1rem;
+}
+
+.reviews{
+	background: #fff;
+	padding: 0.6rem;
+}
+
+.reviews-swiper {
+  width: 100%;
+  margin-top: 0.6rem;
+  padding-bottom: 1.2rem;
+}
+ .reviews-swiper .swiper-slide {
+	  background-position: center;
+	  background-size: cover;
+	  width: 9.75rem;
+	  height: 8rem;
+
+}
+.reviews-swiper .swiper-slide a{
+	display: block;
+	width: 100%;
+}
+.reviews-swiper .swiper-slide img{
+ 	width: 100%;
+ 	max-height: 6.5rem;
+ }
+.reviews-swiper .swiper-slide .name{
+	text-align: center;
+	font-size: 0.6rem;
+	color: #666;
+}
+
+.footer{
+	margin-top: 0.5rem;
+}
+.footer-logo{
+	display: flex;
+	padding: 1.2rem 0 1.2rem 1.2rem;
+	height: 2.3rem;
+	background: #c51230;
+	color: #fff;
+}
+.footer-logo img{
+	flex: 0 0 2.3rem;
+	width: 2.3rem;
+	height: 2.3rem;
+	margin-right: 0.4rem;
+}
+.footer-logo .text{
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.footer-logo .text h1{
+	font-size: 0.8rem;
+	font-weight: normal;
+}
+.footer-logo .text div{
+	font-size: 0.7rem;
+}
+.foot-bottom{
+	height: 1.6rem;
+	background: #000;
+	text-align: center;
+	color: #fff;
+	padding: 0.4rem 0;
+}
+.foot-bottom p{
+	font-size: 0.5rem;
+	line-height: 0.8rem;
+}
+
+.page{
+	margin-top: 0.5rem;
+	background: #fff;
+	min-height: 10rem;
+}
+.page-title{
+	height: 2.5rem;
+	line-height: 2.5rem;
+	font-size: 0.75rem;
+	font-weight: bold;
+	text-align: center;
+}
+
+.tab{
+	display: flex;
+	padding: 0 0.6rem 0.6rem;
+	border-bottom: 1px solid #cbcbcb;
+	justify-content: space-between;
+}
+
+.tab a{
+	display: inline-block;
+	padding: 0 0.45rem;
+	height: 1.35rem;
+	line-height: 1.35rem;
+	font-size: 0.6rem;
+	color: #000;
+	
+}
+.tab .active{
+	background: #e3022e;
+	border-radius: 0.2rem;
+	color: #fff;
+}
+.check-box{
+	padding: 1.1rem 0 3.75rem;
+}
+.check-list{
+	height: 1.25rem;
+	line-height: 1.25rem;
+	margin-bottom: 0.5rem;
+	text-align: center;
+	font-size: 0.6rem;
+}
+.check-list .inp{
+	height: 1.25rem;
+	width: 9.5rem;
+	padding: 0 0.25rem;
+	border: 1px solid #d9d9d9;
+}
+.check-list .name{
+	color: #424242;
+}
+.check-box .btn{
+	text-align: center;
+}
+.check-box .btn input{
+	margin: 1rem 0 0 3rem;
+	height: 1.5rem;
+	width: 10rem;
+	background: #c51230;
+	color: #fff;
+	border: none;
+}
+.tab-list{
+	position: relative;
+	display: none;
+}
+
+.tip-join{
+	padding: 0 0.6rem;
+	line-height: 0.9rem;
+	font-size: 0.55rem;
+}
+.tip-join .tip1{
+	margin: 0.65rem 0;
+	color: #424242;
+}
+.tip-join .tip2{
+	padding: 0.65rem 0;
+	background: #f0f0f0;
+	border: 1px solid #cbcbcb;
+	border-left: none;
+	border-right: none;
+}
+.join-wrap{
+	padding: 0 0.6rem;
+}
+.join-list{
+	line-height: 1.65rem;
+	height: 1.65rem;
+	width: 100%;
+	border-bottom: 1px solid #cbcbcb;
+	font-size: 0.5rem;
+}
+.join-list a{
+	display: flex;
+	color: #c51230;
+}
+.join-list .text{
+	flex: 1;
+	height: 1.65rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	padding-left: 0.65rem;
+	background: url(../images/file.png) no-repeat 0 center;
+	background-size: 0.375rem 0.55rem;
+}
+.join-list .to-right{
+	height: 1.65rem;
+	flex: 0 0 1rem;
+	width: 1rem;
+	background: url(../images/to-right.png) no-repeat right center;
+	background-size: 0.375rem 0.325rem;
+}
+
+.tab-two{
+	justify-content: flex-start;
+}
+.sub-tab{
+	position: absolute;
+	top: 0;
+	left: 0.6rem;
+	background: #e5e5e5;
+	padding: 0.6rem;
+}
+.sub-tab a{
+	display: block;
+	line-height: 1.25rem;
+	font-size: 0.6rem;
+}
+.tab-five{
+	display: block;
+}
+
+.link-wrap{
+	padding: 0.6rem;
+}
+.link-list{
+	line-height: 1.35rem;
+	font-size: 0.6rem;
+}
+.link-list .text{
+	padding-left: 1.35rem;
+	background: url(../images/icon.png) no-repeat;
+	background-position: 0 0;
+	background-size: 1.35rem 6.75rem;
+}
+.link-list .icon2{
+	background-position: 0 -1.35rem;
+}
+.link-list .icon3{
+	background-position: 0 -2.7rem;
+}
+.link-list .icon4{
+	background-position: 0 -4.05rem;
+}
+.link-list .icon5{
+	background-position: 0 -5.4rem;
+}
+.map-link{
+	width: 100%;
+	margin-top: 0.5rem;
+}
+.map-link img{
+	width: 100%;
+}
+
+.page .star-wrap{
+	display: block;
+}
+.page .star-list{
+	float: left;
+	margin:0.5rem 0.15rem;
 }
